--- a/components/brave_rewards/browser/buildflags/buildflags.gni
+++ b/components/brave_rewards/browser/buildflags/buildflags.gni
@@ -1,5 +1,5 @@
 import("//build/config/features.gni")
 
 declare_args() {
-  brave_rewards_enabled = is_mac || is_linux || is_win
+  brave_rewards_enabled = is_mac || is_linux || is_win || is_android
 }
